// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductZoom Component with default theme should render correctly 1`] = `
.c0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #fff;
  overflow: hidden;
}

@media (min-width:48em) {
  .c0 {
    -webkit-transition: top 0.1s ease-out,left 0.1s ease-out,width 0.1s ease-out,height 0.1s ease-out;
    transition: top 0.1s ease-out,left 0.1s ease-out,width 0.1s ease-out,height 0.1s ease-out;
  }

  .sc-bdVaJa:hover .c0 {
    z-index: 10;
    box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.32);
  }
}

@media (min-width:48em) {
  .sc-bdVaJa:hover .c0 {
    left: -2.5%;
    top: -11.5%;
    width: 105%;
    height: 123%;
  }
}

@media (min-width:62em) {
  .sc-bdVaJa:hover .c0 {
    left: -2.5%;
    top: -9.5%;
    width: 105%;
    height: 119%;
  }
}

@media (min-width:80em) {
  .sc-bdVaJa:hover .c0 {
    left: -2.5%;
    top: -9%;
    width: 105%;
    height: 118%;
  }
}

<div
  className="c0"
>
  Content
</div>
`;

exports[`ProductZoom Component with hkm theme should render correctly 1`] = `
.c0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #fff;
  overflow: hidden;
}

@media (min-width:48em) {
  .c0 {
    -webkit-transition: top 0.1s ease-out,left 0.1s ease-out,width 0.1s ease-out,height 0.1s ease-out;
    transition: top 0.1s ease-out,left 0.1s ease-out,width 0.1s ease-out,height 0.1s ease-out;
  }

  .sc-bdVaJa:hover .c0 {
    z-index: 10;
    box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.32);
  }
}

@media (min-width:48em) {
  .sc-bdVaJa:hover .c0 {
    left: -2.5%;
    top: -10%;
    width: 105%;
    height: 120%;
  }
}

@media (min-width:62em) {
  .sc-bdVaJa:hover .c0 {
    left: -2.5%;
    top: -9%;
    width: 105%;
    height: 118%;
  }
}

@media (min-width:80em) {
  .sc-bdVaJa:hover .c0 {
    left: -2.5%;
    top: -7.5%;
    width: 105%;
    height: 115%;
  }
}

<div
  className="c0"
>
  Content
</div>
`;
